--- a/src/main/resources/templates/bookInfo.html
+++ b/src/main/resources/templates/bookInfo.html
@@ -34,7 +34,8 @@
             </form>
         </div>
     </nav>
-    <table id="bookInfo" class="table table-striped" style="width: auto; background-color: hsl(240, 100%, 98%)">
+<!--    <table id="bookInfo" class="table table-striped" style="width: auto; background-color: hsl(240, 100%, 98%)">-->
+    <table class="table table-bordered " style="margin: 0 auto; border: solid 2px blue; background-color: hsl(240, 100%, 98%)">
         <tbody>
         <tr>
             <td>Название</td>
