--- a/src/main/resources/templates/congratulationsOnRegistration.html
+++ b/src/main/resources/templates/congratulationsOnRegistration.html
@@ -8,19 +8,21 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Index page</title>
+    <title>Congratulations on registration page</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" id="index_bookstore_button" href="/index">Bookstore</a>
+    <a class="navbar-brand" href="/index">Bookstore</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 </nav>
 
 <blockquote class="blockquote text-center">
-    <h1 class="display-1">Добро пожаловать в Bookstore!</h1>
-    <a class="display-4" id="index_catalog_button" href="/books"> Каталог </a>
+    <h1 class="display-4">Поздравляем!</h1>
+    <h1 class="display-4">Теперь Вы клиент Bookstore!</h1>
+    <h1 class="display-4">Скорее переходите по ссылке и приступайте к покупкам</h1>
+    <a class="display-4" id="congratulations_on_registration_catalog_button" href="/books"> Каталог </a>
 </blockquote>
 <br><br>
 
