--- a/src/main/resources/templates/bookInfo.html
+++ b/src/main/resources/templates/bookInfo.html
@@ -8,18 +8,18 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Bookstore</title>
+    <title>Book page</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Bookstore</a>
+        <a class="navbar-brand" id="book_info_bookstore_button" href="/index">Bookstore</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Главная <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/books">Главная <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Войти</a>
@@ -28,14 +28,13 @@
                     <a class="nav-link disabled" href="#">Зарегистрироваться</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Поиск">
+            <form class="form-inline my-2 my-lg-0" action="/search" method="post">
+                <input class="form-control mr-sm-2" type="search" name="title" placeholder="Поиск" aria-label="Поиск">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
             </form>
         </div>
     </nav>
-<!--    <table id="bookInfo" class="table table-striped" style="width: auto; background-color: hsl(240, 100%, 98%)">-->
-    <table class="table table-bordered " style="margin: 0 auto; border: solid 2px blue; background-color: hsl(240, 100%, 98%)">
+    <table class="table table-bordered" id="book_table" style="margin: 0 auto; border: solid 2px blue; background-color: hsl(240, 100%, 98%)">
         <tbody>
         <tr>
             <td>Название</td>
