--- a/src/main/resources/templates/openOrder.html
+++ b/src/main/resources/templates/openOrder.html
@@ -8,11 +8,11 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <title>Books page</title>
+  <title>Open order page</title>
 </head>
-
+<body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" id="books_bookstore_button" href="/index">Bookstore</a>
+  <a class="navbar-brand" id="open_order_bookstore_button" href="/index">Bookstore</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -22,10 +22,7 @@
         <a class="nav-link" href="/books">Главная <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="books_log_in_button" href="/logIn" role="button">Войти</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" id="books_registration_button" href="/registration" role="button">Зарегистрироваться</a>
+        <a href="/logOut" class="nav-link" role="button">Выйти</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0" action="/search" method="post">
@@ -34,33 +31,37 @@
     </form>
   </div>
 </nav>
-
-<table class="table table-bordered " style="margin: 0 auto; border: solid 2px blue;">
-  <thead class="thead-ligth">
-  <tr>
-    <th scope="col"> Название </th>
-    <th scope="col"> Автор </th>
-    <th scope="col"> Цена </th>
-  </tr>
-  </thead>
+<table id="open_order" class="table table-bordered " style="margin: 0 auto; border: solid 2px blue; background-color: hsl(240, 100%, 98%)">
   <tbody>
-  <tr th:if="${books.isEmpty()}">
-    <td colspan="8"> Каталог пуст </td>
+  <tr>
+    <td>Идентификатор заказа</td>
+    <td><span th:text="${order.getOrder_id()}"> </span></td>
   </tr>
-  <tr th:each="book : ${books}">
-    <form>
-      <input type="hidden" name="books_book_id" th:value="${book.getBook_id()}"/>
-    </form>
-    <td> <a th:href="'/book?book_id=' + ${book.getBook_id()}"> <span th:text="${book.getTitle()}"> </span> </a></td>
-    <td><span th:text="${book.getAuthors()}"> </span></td>
-    <td><span th:text="${book.getPrice()}"> </span></td>
+  <tr>
+    <td>Время заказа</td>
+    <td><span th:text="${order.getOrder_time()}"> </span></td>
   </tr>
+  <tr>
+    <td>Время доставки</td>
+    <td><span th:text="${order.getDelivery_time()}"> </span></td>
+  </tr>
+  <tr>
+    <td>Стоимость заказа</td>
+    <td><span th:text="${order.getOrder_price()}"> </span></td>
+  </tr>
+  <tr>
+    <td>Статус заказа</td>
+    <td><span th:text="${order.getStatus()}"> </span></td>
+  </tr>
+
   </tbody>
 </table>
+<div>
+  <a class="btn btn-outline-success my-2 my-sm-0" id="checkout_button" th:href="'/checkout?order_id=' + ${order.getOrder_id()}" role="button">Оформить заказ</a>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
 </body>
 </html>
